--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # frontend
 # dependencies
 frontend/node_modules
@@ -33,6 +35,8 @@ frontend/.env*.local
 # typescript
 frontend/*.tsbuildinfo
 frontend/next-env.d.ts
+
+frontend/src/.DS_Store
 
 # backend
 # Python
